--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アプリ年齢制限当てゲーム</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/icon.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="images/icon.png" sizes="180x180">
+    <link rel="icon" href="https://circletkg.github.io/images/icon.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="https://circletkg.github.io/images/icon.png" sizes="180x180">
     <meta name="description" content="circleTKG">
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="circleTKG">
