--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <br>
             <!-- アプリ情報 -->
             <h2 id="appName"></h2>
-            <img id="appIcon" src="" alt="アプリアイコン" style="width:100px; height:100px; display:none;">
+				<div class="center">
+            <img id="appIcon" src="" alt="アプリアイコン">
+				</div>
             <br>
             <div id="choices"></div>
             <p id="result"></p>
