--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
                 <a id="appStoreLink" href="" target="_blank">App Store</a>
                 <a id="playStoreLink" href="" target="_blank">Play Store</a>
             </p>
+            <p>※App Storeに基づいた年齢制限です。</p>
         </section>
     </main>
 </body>
