--- a/setup/index.html
+++ b/setup/index.html
@@ -4,7 +4,7 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-        <button id="installBtn" style="width: 100%;">ホーム画面に追加</button>
+        <button id="installBtn" style="width: 100%;height: 100%;">ホーム画面に追加</button>
         <script src="service-worker.js"></script>
     </body>
 </html>
